WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33605
[Android] [Qt] The document.createEvent API does not support touch events.
https://bugs.webkit.org/show_bug.cgi?id=33605
Summary
[Android] [Qt] The document.createEvent API does not support touch events.
Ben Murdoch
Reported
2010-01-13 09:43:06 PST
The document.createEvent API does not allow the creation of touch events. I have a patch that will enable it with the syntax document.createEvent("TouchEvent").
Attachments
Proposed patch and test.
(3.86 KB, patch)
2010-01-13 09:50 PST
,
Ben Murdoch
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ben Murdoch
Comment 1
2010-01-13 09:50:09 PST
Created
attachment 46470
[details]
Proposed patch and test.
WebKit Commit Bot
Comment 2
2010-01-14 02:03:41 PST
Comment on
attachment 46470
[details]
Proposed patch and test. Clearing flags on attachment: 46470 Committed
r53250
: <
http://trac.webkit.org/changeset/53250
>
WebKit Commit Bot
Comment 3
2010-01-14 02:03:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug