2010-01-14  Ben Murdoch  <benm@google.com>

Reviewed by Darin Adler.

        [Android] [Qt] The document.createEvent API does not support touch events.
        https://bugs.webkit.org/show_bug.cgi?id=33605

        * fast/events/script-tests/create-touch-event.js: Added. Ensures that document.createEvent("TouchEvent") can create a TouchEvent.
        * fast/events/touch/create-touch-event-expected.txt: Added.
        * fast/events/touch/create-touch-event.html: Added.
2010-01-14  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Adler.

        [Android] [Qt] The document.createEvent API does not support touch events.
        https://bugs.webkit.org/show_bug.cgi?id=33605

        Test: fast/events/touch/create-touch-event.html

        * dom/Document.cpp:
        (WebCore::Document::createEvent): add creation of a TouchEvent when the "TouchEvent" argument is supplied.

Canonical link: https://commits.webkit.org/44658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53250 268f45cc-cd09-0410-ab3c-d52691b4dbfc